# detect_glare_in_image

./: .gitignore  README.md  pyproject.toml  requirements.txt
camera_glare/: app.py  glare_checker.py
camera_glare/templates/: index.html  result.html
tests/: test.py
