[tool.poetry]
name = "camera_glare"
version = "0.1.0"
description = "an api for checking if there is glare on an image."
authors = ["Dami Osayomi <Damio@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
flask-expects-json = "^1.5.0"
unittest = "^0.0"
astropy = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
